--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,13 @@
       *{
         margin: 0;
       }
+      
+    </style>
+    <style>
+      .link{
+        text-decoration: none;
+        color: inherit;
+      }
     </style>
     <title>Blog React App</title>
   </head>
